--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   </head>
   <body style="background-color: rgb(217, 240, 214)">
     <div id="root" className="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="../src/main.jsx"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
