--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,14 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
   </head>
-  <body style="background-color: rgb(217, 240, 214)">
+  <body
+    style="
+      background-image: url('../src/assets/biblioteca.jpeg');
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center center;
+    "
+  >
     <div id="root" className="root"></div>
     <script type="module" src="../src/main.jsx"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
