Retrocediendo en el deploy

--- a/public/success/index.html
+++ b/public/success/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Pago Exitoso</title>
-<link rel="stylesheet" href="/public/success/styles.css">
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <div class="contenedor">
@@ -16,6 +16,6 @@
     <button id="boton-volver">Volver a la tienda</button>
 </div>
 
-<script src="/public/success/script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
